# llm-engineering

./: .gitignore  README.md  pyproject.toml
src/config/: settings.py
src/services/: brochure.py  link_selector.py  scraper.py
week1/: README.md  day1.ipynb  day2.ipynb  day3.ipynb
week2/: README.md  day1.ipynb
