[project]
name = "llm-engineering"
version = "0.1.0"
description = "LLM Engineering Zero to Hero"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai",
    "groq",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "lxml",
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "pandas",
    "numpy",
    "matplotlib",
    "tqdm",
    "tiktoken",
    "tavily-python",
    "ollama>=0.6.0",
    "pydantic",
    "pydantic-core",
]
