[project]
name = "llm-engineering"
version = "0.1.0"
description = "LLM Engineering Zero to Hero"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai",
    "groq",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "lxml",
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "pandas",
    "numpy",
    "matplotlib",
    "tqdm",
    "tiktoken",
    "tavily-python",
    "ollama>=0.6.0",
    "pydantic",
    "pydantic-core",
    "pydantic-settings>=2.14.2",
    "trafilatura>=2.1.0",
    "selenium>=4.46.0",
    "webdriver-manager>=4.1.2",
    "google-genai>=2.12.1",
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
]
